--- a/admin/css/save-as-image-pdfcrowd-admin.css
+++ b/admin/css/save-as-image-pdfcrowd-admin.css
@@ -20,6 +20,12 @@
     max-width: 500px !important;
 }
 
+#save-as-image-pdfcrowd-options pre {
+    font-size: 13px;
+    line-height: 1.2;
+    margin: 0.5em 0 0 1em;
+}
+
 
 .save-as-image-pdfcrowd-reset,
 .save-as-image-pdfcrowd-reset * {
@@ -36,10 +42,17 @@
 
 .save-as-image-pdfcrowd-button {
     display: inline-block;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .save-as-image-pdfcrowd-button img {
     vertical-align: middle;
+    display: inline-block;
 }
 
 
