--- a/public/css/save-as-image-pdfcrowd-public.css
+++ b/public/css/save-as-image-pdfcrowd-public.css
@@ -14,10 +14,17 @@
 
 .save-as-image-pdfcrowd-button {
     display: inline-block;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .save-as-image-pdfcrowd-button img {
     vertical-align: middle;
+    display: inline-block;
 }
 
 
