--- a/admin/css/save-as-image-pdfcrowd-admin.css
+++ b/admin/css/save-as-image-pdfcrowd-admin.css
@@ -50,6 +50,10 @@
     user-select: none;
 }
 
+.save-as-image-pdfcrowd-button-hover, .save-as-image-pdfcrowd-has-indicator-func:hover {
+    filter: grayscale(30%);
+}
+
 .save-as-image-pdfcrowd-button img {
     vertical-align: middle;
     display: inline-block;
