--- a/admin/css/save-as-image-pdfcrowd-admin.css
+++ b/admin/css/save-as-image-pdfcrowd-admin.css
@@ -1,5 +1,9 @@
 .save-as-image-pdfcrowd-m-description {
-    max-height: 86px;
+    margin-top: .3em;
+}
+
+#save-as-image-pdfcrowd-page-setup .save-as-image-pdfcrowd-m-description {
+    max-height: 8em;
     overflow-y: auto;
 }
 
@@ -32,8 +36,12 @@
     all: initial;
 }
 
-.save-as-image-pdfcrowd-button-wrap {
+div.save-as-image-pdfcrowd-button-wrap {
     display: block;
+}
+
+span.save-as-image-pdfcrowd-button-wrap {
+    display: inline;
 }
 
 .save-as-image-pdfcrowd-button-wrap * {
@@ -97,4 +105,13 @@
 
 #save-as-image-pdfcrowd-support-notes {
     margin-top: 2em;
+}
+
+#save-as-image-pdfcrowd-lic-invalid {
+    background: #fefebb;
+    padding: 0.5em;
+}
+
+#save-as-image-pdfcrowd-lic-invalid .attention {
+    font-size: 110%;
 }
