--- a/public/css/save-as-image-pdfcrowd-public.css
+++ b/public/css/save-as-image-pdfcrowd-public.css
@@ -4,8 +4,12 @@
     all: initial;
 }
 
-.save-as-image-pdfcrowd-button-wrap {
+div.save-as-image-pdfcrowd-button-wrap {
     display: block;
+}
+
+span.save-as-image-pdfcrowd-button-wrap {
+    display: inline;
 }
 
 .save-as-image-pdfcrowd-button-wrap * {
