--- a/public/css/save-as-image-pdfcrowd-public.css
+++ b/public/css/save-as-image-pdfcrowd-public.css
@@ -40,3 +40,24 @@ span.save-as-image-pdfcrowd-button-wrap {
 .save-as-image-pdfcrowd-post-form {
     display: none !important;
 }
+
+.save-as-image-pdfcrowd-diag {
+    background-color: #eee;
+    padding: .5em;
+    clear: both;
+}
+
+.save-as-image-pdfcrowd-diag-tab {
+    width: auto;
+}
+
+.save-as-image-pdfcrowd-diag-tab th {
+    white-space: nowrap;
+    padding: 2px 8px;
+    text-align: start;
+}
+
+.save-as-image-pdfcrowd-diag-tab td {
+    white-space: pre-line;
+    padding: 2px 8px;
+}
